--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -4,27 +4,29 @@
       <a href="/{{name}}">&laquo; Back</a>
     </div>
     <h1>History of {{human_name}}</h1>
-    <table class="commits" cellpadding="0" cellspacing="0">
-      <tr>
-        <th colspan="7">
-          Select any two versions to <input type="button" value="Compare" />
-        </th>
-      {{#versions}}
+    <form method="post" action="/compare/{{name}}">
+      <table class="commits" cellpadding="0" cellspacing="0">
         <tr>
-          <td class="checkbox">
-            <input type="checkbox" />
-          </td>
-          <td class="sha">
-            <a href="/{{name}}/{{id}}">{{id7}}</a>
-          </td>
-          <td nowrap class="author">
-            <img src="http://www.gravatar.com/avatar/{{gravatar}}?s=16" alt="Gravatar" />
-            {{author}}
-          </td>
-          <td class="message">{{message}}</td>
-          <td class="date">{{date}}</td>
-        </tr>
-      {{/versions}}
-    </table>
+          <th colspan="5">
+            Select any two versions to <input type="submit" value="Compare" />
+          </th>
+        {{#versions}}
+          <tr>
+            <td class="checkbox">
+              <input name="versions[]" type="checkbox" value="{{id}}" />
+            </td>
+            <td class="sha">
+              <a href="/{{name}}/{{id}}">{{id7}}</a>
+            </td>
+            <td nowrap class="author">
+              <img src="http://www.gravatar.com/avatar/{{gravatar}}?s=16" alt="Gravatar" />
+              {{author}}
+            </td>
+            <td class="message">{{message}}</td>
+            <td class="date">{{date}}</td>
+          </tr>
+        {{/versions}}
+      </table>
+    </form>
   </div>
 </div>
