--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -2,28 +2,37 @@
   <a href="/{{name}}">&laquo; Back</a>
   <h1>Editing &ldquo;{{name}}&rdquo;</h1>
 
-  <form iclass="edit_wiki" method="post" action="/edit/{{name}}">
-    <div id="wiki-form" class="comment-form wiki-form">
-      <ul class="tabs inline-tabs">
-        <li><a href="#write_bucket" action="write">Write</a></li>
-        <li><a href="#preview_bucket" action="preview">Preview</a></li>
-      </ul>
-      <div id="write_bucket" class="tab-content">
-        {{>editbar}}
-        <div class="inner">
-          <textarea name="content">{{content}}</textarea>
+  <form class="edit_wiki" method="post" action="/edit/{{name}}">
+    <div>
+      <label>
+        Title<br />
+        <input class="text" type="text" name="rename" value="{{name}}" />
+      </label>
+      <br />
+
+      <div id="wiki-form" class="comment-form wiki-form">
+        <ul class="tabs inline-tabs">
+          <li><a href="#write_bucket" action="write">Write</a></li>
+          <li><a href="#preview_bucket" action="preview">Preview</a></li>
+        </ul>
+        <div id="write_bucket" class="tab-content">
+
+          {{>editbar}}
+          <div class="inner">
+            <textarea name="content">{{content}}</textarea>
+          </div>
+        </div>
+        <div id="preview_bucket" class="tab-content content-body content wikistyle gollum">
+          <p>Loading content...</p>
         </div>
       </div>
-      <div id="preview_bucket" class="tab-content content-body content wikistyle gollum">
-        <p>Loading content...</p>
+      <label>
+        Edit Summary <small>(Briefly describe the changes you have made)</small><br />
+        <input type="text" class="text" name="message" />
+      </label>
+      <div class="actions">
+        <input type="submit" value="Save page" />
       </div>
-    </div>
-    <label>
-      Edit Summary <small>(Briefly describe the changes you have made)</small><br />
-      <input type="text" class="text" name="message" />
-    </label>
-    <div class="actions">
-      <input type="submit" value="Save page" />
     </div>
   </form>
 </div>
