Add nowrap to date on history page.

--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -23,7 +23,7 @@
               {{author}}
             </td>
             <td class="message">{{message}}</td>
-            <td class="date">{{date}}</td>
+            <td nowrap class="date">{{date}}</td>
           </tr>
         {{/versions}}
       </table>
