Polish up page titles.

--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -3,7 +3,7 @@
     <div class="actions">
       <a href="/{{name}}">&laquo; Back</a>
     </div>
-    <h1>Comparison of {{human_name}}: {{before}} &rarr; {{after}}</h1>
+    <h1>{{title}}: {{before}} &rarr; {{after}}</h1>
     <div id="files">
       <div class="file">
         <div class="meta">
