--- a/templates/create.mustache
+++ b/templates/create.mustache
@@ -1,6 +1,6 @@
 <div class="write">
   <a href="/">&laquo; Home</a>
-  <h1>Create a new page</h1>
+  <h1>{{title}}</h1>
 
   <form class="new_wiki" method="post" action="/create/{{name}}">
     <div>
