--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -1,6 +1,6 @@
 <div class="write">
   <a href="/{{name}}">&laquo; Back</a>
-  <h1>Editing &ldquo;{{name}}&rdquo;</h1>
+  <h1>{{title}}</h1>
 
   <form class="edit_wiki" method="post" action="/edit/{{name}}">
     <div>
