--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -3,7 +3,7 @@
     <div class="actions">
       <a href="/{{name}}">&laquo; Back</a>
     </div>
-    <h1>History of {{human_name}}</h1>
+    <h1>{{title}}</h1>
     <form id="history" method="post" action="/compare/{{name}}">
       <table class="commits" cellpadding="0" cellspacing="0">
         <tr>
