--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -3,7 +3,7 @@
     <div class="actions">
       <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a>
     </div>
-    <h1>{{human_name}}</h1>
+    <h1>{{title}}</h1>
     <div class="content wikistyle gollum {{format}}">
       {{{content}}}
     </div>
