Strip dashes from page name shown on creation page.

--- a/templates/create.mustache
+++ b/templates/create.mustache
@@ -6,7 +6,7 @@
     <div>
       <label>
         Title<br />
-        <input class="text" type="text" name="page" value="{{name}}" />
+        <input class="text" type="text" name="page" value="{{page_name}}" />
       </label>
       <br />
 
