--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -8,7 +8,7 @@
       <table class="commits" cellpadding="0" cellspacing="0">
         <tr>
           <th colspan="5">
-            Select any two versions to <input type="submit" value="Compare" disabled />
+            Select any two versions to <input type="submit" value="Compare" />
           </th>
         {{#versions}}
           <tr class="commit">
