Change search-field to use type="search"
The search-field will now show with a little magnifying-glass on Webkit
based browsers.
type="search" is part of HTML5.

--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -2,7 +2,7 @@
   <div class="main">
     <div class="actions">
       <form action="/search" method="get">
-        <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a> | <input type="text" name="q" size="10" /> <input type="submit" value="search" />
+        <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a> | <input type="search" name="q" size="10" /> <input type="submit" value="search" />
       </form>
     </div>
     <h1>{{title}}</h1>
