--- a/templates/search.mustache
+++ b/templates/search.mustache
@@ -2,7 +2,7 @@
   <div class="main">
     <div class="actions">
       <form action="/search" method="get">
-        <a href="/">Home</a> | <input type="text" name="q" size="10" /> <input type="submit" value="search" />
+        <a href="/">Home</a> | <input type="search" name="q" size="10" /> <input type="submit" value="search" />
       </form>
     </div>
     <h1>Search for “{{search_string}}”</h1>
