Refactor of search view

--- a/templates/search.mustache
+++ b/templates/search.mustache
@@ -5,7 +5,7 @@
         <a href="/">Home</a> | <input type="search" name="q" size="10" /> <input type="submit" value="search" />
       </form>
     </div>
-    <h1>Search for “{{search_string}}”</h1>
+    <h1>Search for “{{query}}”</h1>
     <div class="content wikistyle gollum">
       {{#has_results}}
         <ul>
