--- a/templates/create.mustache
+++ b/templates/create.mustache
@@ -8,3 +8,8 @@
   </div>
 </div>
 </div>
+<script type="text/javascript">
+jQuery(document).ready(function() {
+  $.GollumEditor({ NewFile: true });
+});
+</script>
