--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -14,3 +14,8 @@
   </div>
 </div>
 </div>
+<script type="text/javascript">
+jQuery(document).ready(function() {
+  $.GollumEditor();
+});
+</script>
