--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -37,11 +37,25 @@
   <fieldset id="gollum-editor-fields">
     <textarea id="gollum-editor-body"
      data-markup-lang="markdown" name="content">{{content}}</textarea>
+     
+     
+    <div id="gollum-editor-edit-footer" class="collapsed">
+      <a href="#" class="button"><span>Expand/Collapse</span></a>
+      <h4>Footer</h4>
+      <textarea id="gollum-editor-footer" name="footer"></textarea>
+    </div>
+    
+    <div id="gollum-editor-edit-sidebar" class="collapsed">
+      <a href="#" class="button"><span>Expand/Collapse</span></a>
+      <h4>Sidebar</h4>
+      <textarea id="gollum-editor-sidebar" name="sidebar"></textarea>
+    </div>
     
     <div id="gollum-editor-edit-summary" class="singleline">
       <label for="message" class="jaws">Edit message:</label>
       <input type="text" name="message" id="gollum-editor-message-field" value="Write a small message here explaining this change. (Optional)">
     </div>
+    
     
     <span class="jaws"><br></span>
     <input type="submit" id="gollum-editor-submit" value="Save" title="Save current changes">
