--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -9,7 +9,7 @@
   </ul>
 </div>
 <div id="wiki-content">
-  <div class="{{#has_footer}}has-footer{{/has_footer}}{{#has_sidebar}}has-rightbar{{/has_sidebar}}">
+  <div class="wrap{{#has_footer}} has-footer{{/has_footer}}{{#has_sidebar}}has-rightbar{{/has_sidebar}}">
   <div id="wiki-body">
     <div id="template">
       {{{content}}}
