--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -4,7 +4,7 @@
   <ul class="actions">
     <li class="minibutton"><a href="/{{escaped_name}}"
        class="action-view-page">View Page</a></li>
-    <li class="minibutton"><a href="/edit/{escaped_name}}"
+    <li class="minibutton"><a href="/edit/{{escaped_name}}"
        class="action-edit-page">Edit Page</a></li>
   </ul>
 </div>
