--- a/public/css/gollum.css
+++ b/public/css/gollum.css
@@ -406,3 +406,42 @@ ul.actions {
   background: -webkit-gradient(linear, left top, left bottom, from(#599bdc), to(#3072b3));
   background: -moz-linear-gradient(top, #599bdc, #3072b3);
 }
+
+
+/* @special error */
+#wiki-wrapper.error {
+  height: 1px;
+  position: absolute;
+  overflow: visible;
+  top: 50%;
+  width: 100%;
+}
+
+#error {
+  background-color: #f9f9f9;
+  border: 1px solid #e4e4e4;
+  left: 50%;
+  overflow: hidden;
+  padding: 2%;
+  margin: -10% 0 0 -35%;
+  position: absolute;
+  width: 70%;
+  
+  border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+}
+
+#error h1 {
+  font-size: 3em;
+  line-height: normal;
+  margin: 0;
+  padding: 0;
+}
+
+#error p {
+  font-size: 1.2em;
+  line-height: 1.6em;
+  margin: 1em 0 0.5em;
+  padding: 0;
+}
