--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -7,6 +7,7 @@
     <li class="minibutton"><a href="/history/{{escaped_name}}"
        class="action-page-history">Page History</a></li>
   </ul>
+  {{>searchbar}}
 </div>
 <div id="wiki-content">
   <div class="wrap{{#has_footer}} has-footer{{/has_footer}}{{#has_sidebar}}has-rightbar{{/has_sidebar}}">
