--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -4,10 +4,12 @@
   <meta http-equiv="Content-type" content="text/html;charset=utf-8">
   <link rel="stylesheet" type="text/css" href="/css/gollum.css" media="all">
   <link rel="stylesheet" type="text/css" href="/css/editor.css" media="all">
+  <link rel="stylesheet" type="text/css" href="/css/dialog.css" media="all">
   <link rel="stylesheet" type="text/css" href="/css/template.css" media="all">
   
   <script type="text/javascript" src="/javascript/jquery.js"></script>
   <script type="text/javascript" src="/javascript/gollum.js"></script>
+  <script type="text/javascript" src="/javascript/gollum.dialog.js"></script>
   <script type="text/javascript" src="/javascript/gollum.fx.js"></script>
   <!-- TODO: only load this on the edit page -->
   <script type="text/javascript" 
