--- a/templates/searchbar.mustache
+++ b/templates/searchbar.mustache
@@ -1,6 +1,8 @@
 <div id="searchbar">
   <div id="searchbar-fauxtext">
     <input type="text" name="q" id="search-query">
-    <input type="submit" id="search-submit">
+    <a href="#" id="search-submit" title="Search this wiki">
+      <span>Search</span>
+    </a>
   </div>
 </div>
