--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="/javascript/jquery.js"></script>
   <script type="text/javascript" src="/javascript/gollum.js"></script>
   <script type="text/javascript" src="/javascript/gollum.dialog.js"></script>
+  <script type="text/javascript" src="/javascript/gollum.placeholder.js"></script>
   <script type="text/javascript" src="/javascript/gollum.fx.js"></script>
   <!-- TODO: only load this on the edit page -->
   <script type="text/javascript" 
