--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -1,6 +1,6 @@
 <div id="wiki-wrapper" class="page">
 <div id="head">
-  <h1>Page Title</h1>
+  <h1>{{title}}</h1>
   <ul class="actions">
     <li class="minibutton"><a href="/edit/{{escaped_name}}"
        class="action-edit-page">Edit Page</a></li>
