--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -37,10 +37,10 @@
         <td class="commit-name">
           <span class="time-elapsed">{{date}}:</span>&nbsp;
           {{message}}
-          [<a href="/{{escaped_name}}/{{id}}" title="View commit">{{id7}}&hellip;</a>]
+          [<a href="/{{escaped_name}}/{{id}}" title="View commit">{{id7}}</a>]
         </td>
         <td class="revert-action">
-          <a href="#" title="Revert to this change" rel="{{id}}">Revert to <span>{{id7}}&hellip;</span></a>
+          <a href="#" title="Revert to this change" rel="{{id}}">Revert to <span>{{id7}}</span></a>
         </td>
       </tr>
       {{/versions}}
