--- a/templates/search.mustache
+++ b/templates/search.mustache
@@ -29,5 +29,10 @@
 {{/no_results}}
 
 </div>
+<div id="footer">
+  <ul class="actions">
+    <li class="minibutton"><a href="#">Back to Top</a></li>
+  </ul>
+</div>
 </div>
 
