--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -1,4 +1,4 @@
-<div id="gollum-editor">
+<div id="gollum-editor" data-escaped-name="{{escaped_name}}" class="{{#is_create_page}}create{{/is_create_page}}{{#is_edit_page}}edit{{/is_edit_page}}">
 {{#is_create_page}}
 <form name="gollum-editor" action="/create/{{escaped_name}}" method="post">
 {{/is_create_page}}
@@ -80,6 +80,7 @@
     
     <span class="jaws"><br></span>
     <input type="submit" id="gollum-editor-submit" value="Save" title="Save current changes">
+    <a href="javascript:void(0)" id="gollum-editor-preview" class="minibutton" title="Preview this Page">Preview</a>
   </fieldset>
 </form>
 </div>
